Fixing spacing on the drop down menus

--- a/css/style.css
+++ b/css/style.css
@@ -9598,7 +9598,7 @@ ul#tabs .current > a:hover {
   margin-right: 22px;
 }
 .primary-navigation ul > li > a {
-  padding-bottom: 9px;
+  padding-bottom: 3px;
 }
 .primary-navigation .dropdown-menu {
   margin-top: 0px;
